@@ -1,0 +1,8 @@
+class mcollective::service {
+
+  service { 'mcollective':
+    ensure => 'running',
+    enable => true,
+  }
+
+}
