@@ -8,6 +8,9 @@
   "project_page": "https://github.com/evenup/evenup-mcollective",
   "issues_url": "https://github.com/evenup/evenup-mcollective/issues",
   "tags": ["mcollective"],
+  "requirements": [
+    { "name": "puppet", "version_requirement": ">=4.0.0" }
+  ],
   "operatingsystem_support": [
     { "operatingsystem": "RedHat", "operatingsystemrelease": [ "6", "7" ] },
     { "operatingsystem": "CentOS", "operatingsystemrelease": [ "6", "7" ] },
