@@ -1,3 +1,4 @@
+  Rework for puppet AIO installs
 20140415 v1.8.0
   Update facts.yml for newer versions of ruby and facter
   Remove dependency on evenup/ruby, evenup/facter, evenup/logrotate, evenup/common
